[project]
name = "crashomon-web"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "S"]
ignore = [
  "S603",  # subprocess calls are intentional in this project
  "S607",  # partial path subprocess calls are intentional
]

[tool.ruff.lint.per-file-ignores]
"web/tests/*" = ["S101"]  # assert is fine in tests

[tool.pytest.ini_options]
testpaths = ["web/tests"]
pythonpath = ["."]
