cmake_minimum_required(VERSION 3.25)
project(crashomon-demo CXX C)

# ── Language standards — must match the parent crashomon project ───────────────
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

# ── Pull in the full crashomon project ────────────────────────────────────────
# Provides: crashomon_client, crashomon_watcherd, minidump_stackwalk,
#           breakpad_dump_syms (IMPORTED — set CRASHOMON_DUMP_SYMS_EXECUTABLE).
#
# Build the dump_syms host binary once before configuring this project:
#   cmake -B _host_build -S ../cmake/dump_syms_host/
#   cmake --build _host_build
# Then configure the demo:
#   cmake -B _build -S . -DCRASHOMON_DUMP_SYMS_EXECUTABLE=../_host_build/dump_syms
#
# run_demo.sh performs both steps automatically.

# Force-enable minidump_stackwalk (required by crashomon-analyze).
set(CRASHOMON_BUILD_ANALYZE ON CACHE BOOL "Build minidump_stackwalk" FORCE)

add_subdirectory(.. crashomon)

find_package(Threads REQUIRED)

# ── Demo crasher ───────────────────────────────────────────────────────────────
# Links crashomon_client for explicit-init mode (not LD_PRELOAD).
# Threads::Threads is linked explicitly for pthread_create/pthread_setname_np.
# crashomon_warnings is intentionally not applied — this is demo code, not
# production library code, and does not need -Wpedantic/-Werror.
add_executable(demo-crasher demo_crasher.cpp)
target_link_libraries(demo-crasher PRIVATE crashomon_client Threads::Threads)
# -fno-omit-frame-pointer ensures all pipeline stages appear as distinct frames
# in the minidump backtrace.  Without this, the CFI unwinder loses intermediate
# frames at -O3 even when [[gnu::noinline]] is set.
target_compile_options(demo-crasher PRIVATE -fno-omit-frame-pointer)

# ── Export binary paths for run_demo.sh ────────────────────────────────────────
# file(GENERATE) evaluates generator expressions at CMake generate time and
# writes a shell-sourceable file with the final binary paths.  The script
# sources this after `cmake --build` to locate every tool it needs.
file(GENERATE
  OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/demo_paths.sh"
  CONTENT
"# Auto-generated by CMake — do not edit.
DEMO_CRASHER=\"$<TARGET_FILE:demo-crasher>\"
WATCHERD=\"$<TARGET_FILE:crashomon_watcherd>\"
MINIDUMP_STACKWALK=\"$<TARGET_FILE:minidump_stackwalk>\"
DUMP_SYMS=\"${CRASHOMON_DUMP_SYMS_EXECUTABLE}\"
LIBCRASHOMON_DIR=\"$<TARGET_FILE_DIR:crashomon_client>\"
"
)
