cmake_minimum_required(VERSION 3.25)
project(crashomon-demo CXX C)

# ── Language standards — must match the parent crashomon project ───────────────
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

# ── Pull in the full crashomon project ────────────────────────────────────────
# Provides: crashomon_client, crashomon_watcherd, breakpad_dump_syms (IMPORTED).
#
# Build the host toolkit once before configuring this project:
#   cmake -B _host_build -S ../cmake/host_toolkit/
#   cmake --build _host_build --target host_toolkit
# Then configure the demo:
#   cmake -B _build -S . -DCRASHOMON_HOST_TOOLKIT_DIR=../_host_build/bin
#
# run_demo.sh performs both steps automatically.

add_subdirectory(.. crashomon)

find_package(Threads REQUIRED)

# ── Demo crasher ───────────────────────────────────────────────────────────────
# Links crashomon_client for explicit-init mode (not LD_PRELOAD).
# Threads::Threads is linked explicitly for pthread_create/pthread_setname_np.
# crashomon_warnings is intentionally not applied — this is demo code, not
# production library code, and does not need -Wpedantic/-Werror.
add_executable(demo-crasher demo_crasher.cpp)
target_link_libraries(demo-crasher PRIVATE crashomon_client Threads::Threads)
# -fno-omit-frame-pointer ensures all pipeline stages appear as distinct frames
# in the minidump backtrace.  Without this, the CFI unwinder loses intermediate
# frames at -O3 even when [[gnu::noinline]] is set.
target_compile_options(demo-crasher PRIVATE -fno-omit-frame-pointer)

# ── Export binary paths for run_demo.sh ────────────────────────────────────────
# file(GENERATE) evaluates generator expressions at CMake generate time and
# writes a shell-sourceable file with the final binary paths.  The script
# sources this after `cmake --build` to locate every tool it needs.
file(GENERATE
  OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/demo_paths.sh"
  CONTENT
"# Auto-generated by CMake — do not edit.
DEMO_CRASHER=\"$<TARGET_FILE:demo-crasher>\"
WATCHERD=\"$<TARGET_FILE:crashomon_watcherd>\"
MINIDUMP_STACKWALK=\"${MINIDUMP_STACKWALK_EXECUTABLE}\"
DUMP_SYMS=\"${CRASHOMON_DUMP_SYMS_EXECUTABLE}\"
LIBCRASHOMON_DIR=\"$<TARGET_FILE_DIR:crashomon_client>\"
"
)
